--- a/connect.html
+++ b/connect.html
@@ -11,7 +11,7 @@
 
 <div class="navbar">
 <ul>
-<li><a href="index.html">ancientcafe.tv</a></li>
+<li><a href="index.html">ancientcafe</a></li>
 <li><a href="https://twitch.tv/ancientcafe">twitch</a></li>
 <li><a href="music.html">music</a></li>
 <li><a href="connect.html">connect</a></li>
