--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </div>
 
 <h1>hi, welcome to ancientcafe.tv</h1>
-<p>enjoy your stay</p>
+<p>enjoy your stay!</p>
+<p>this site is still under construction!</p>
 
 <p></p>
 
