--- a/music.html
+++ b/music.html
@@ -18,7 +18,8 @@
 </ul>
 </div>
 
-<h1>listen to some tunes</h1>
+<h1>listen to some tunes?</h1>
+<p>this site is still under construction!</p>
 
 
 
