--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
 <body>
 
+<a href="index.html">
+<img id="brand" src="img/brand long trans.png" alt="brand">
+</a>
+
 <div class="navbar">
 <ul>
-<li><a href="index.html">ancientcafe</a></li>
-<li><a href="https://twitch.tv/ancientcafe">twitch</a></li>
-<li><a href="music.html">music</a></li>
-<li><a href="connect.html">connect</a></li>
+<li><a class="twitch" href="https://twitch.tv/ancientcafe">twitch</a></li>
+<li><a class="music" href="music.html">music</a></li>
+<li><a class="connect" href="connect.html">connect</a></li>
 </ul>
 </div>
 
-<h1>hi, welcome to ancientcafe.tv</h1>
-<p>enjoy your stay!</p>
-<p>this site is still under construction!</p>
-
-<p></p>
-
+<h1>hi, and welcome!</h1>
+<p>ancientcafe is a project created with a single goal in mind: bring people together through music</p>
+<p>so grab your favorite blend of coffee and enjoy your stay at the cafe!</p>
 
 </body>
 </html>
