--- a/music.html
+++ b/music.html
@@ -9,19 +9,20 @@
 
 <body>
 
+<a href="index.html">
+<img id="brand" src="img/brand long trans.png" alt="brand">
+</a>
+
 <div class="navbar">
 <ul>
-<li><a href="index.html">ancientcafe</a></li>
-<li><a href="https://twitch.tv/ancientcafe">twitch</a></li>
-<li><a href="music.html">music</a></li>
-<li><a href="connect.html">connect</a></li>
+<li><a class="twitch" href="https://twitch.tv/ancientcafe">twitch</a></li>
+<li><a class="music" href="music.html">music</a></li>
+<li><a class="connect" href="connect.html">connect</a></li>
 </ul>
 </div>
 
-<h1>listen to some tunes?</h1>
-<p>this site is still under construction!</p>
-
-
+<h1>musical things</h1>
+<p>still working on this part of the site!</p>
 
 </body>
 </html>
