--- a/connect.html
+++ b/connect.html
@@ -9,21 +9,20 @@
 
 <body>
 
-<a href="index.html">
-<img id="brand" src="img/brand long trans.png" alt="brand">
-</a>
+<div class="content">
 
-<div class="navbar">
-<ul>
-<li><a class="twitch" href="https://twitch.tv/ancientcafe">twitch</a></li>
-<li><a class="music" href="music.html">music</a></li>
-<li><a class="connect" href="connect.html">connect</a></li>
-</ul>
-</div>
+  <div class="navbar">
+  <ul>
+  <li><a class="icon" href="index.html"><img id="icon" src="img/transnoglo.png"></a></li>
+  <li><a class="twitch" href="https://twitch.tv/ancientcafe">twitch</a></li>
+  <li><a class="music" href="music.html">music</a></li>
+  <li><a class="connect" href="connect.html">connect</a></li>
+  </ul>
+  </div>
 
 <h1>connectical things</h1>
 <p>still working on this part of the site!</p>
 
-
+</div>
 </body>
 </html>
