--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
 </head>
 
 <body>
+<div class="logo">
 
-<a href="index.html">
 <img id="brand" src="img/brand long trans.png" alt="brand">
-</a>
 
-<div class="navbar">
-<ul>
-<li><a class="twitch" href="https://twitch.tv/ancientcafe">twitch</a></li>
-<li><a class="music" href="music.html">music</a></li>
-<li><a class="connect" href="connect.html">connect</a></li>
-</ul>
 </div>
+
+<div class="content">
+
+  <div class="navbar">
+  <ul>
+  <li><a class="icon" href="index.html"><img id="icon" src="img/transnoglo.png"></a></li>
+  <li><a class="twitch" href="https://twitch.tv/ancientcafe">twitch</a></li>
+  <li><a class="music" href="music.html">music</a></li>
+  <li><a class="connect" href="connect.html">connect</a></li>
+  </ul>
+  </div>
 
 <h1>hi, and welcome!</h1>
 <p>ancientcafe is a project created with a single goal in mind: bring people together through music</p>
 <p>so grab your favorite blend of coffee and enjoy your stay at the cafe!</p>
 
+
+
+
+</div>
 </body>
 </html>
