--- a/connect.html
+++ b/connect.html
@@ -21,7 +21,10 @@
   </div>
 
 <h1>connectical things</h1>
-<p>still working on this part of the site!</p>
+
+<p><a href="https://twitter.com/ancientcafe">twitter</a></p>
+<p><a href="https://tiktok.com/@ancientcafetv">tiktok</a></p>
+<p>(discord coming soon!)</p>
 
 <footer></footer>
 </div>
