--- a/connect.html
+++ b/connect.html
@@ -24,7 +24,7 @@
 
 <p><a href="https://twitter.com/ancientcafe">twitter</a></p>
 <p><a href="https://tiktok.com/@ancientcafetv">tiktok</a></p>
-<p>(discord coming soon!)</p>
+<p><a href="https://discord.gg/3hQdDdgSAY">discord</a></p>
 
 <footer></footer>
 </div>
