--- a/connect.html
+++ b/connect.html
@@ -22,6 +22,7 @@
 
 <h1>connectical things</h1>
 
+<p><a href="https://www.youtube.com/channel/UCf9rjEMLaOC4eAK-gTxQWyw">youtube</a></p>
 <p><a href="https://twitter.com/ancientcafe">twitter</a></p>
 <p><a href="https://tiktok.com/@ancientcafetv">tiktok</a></p>
 <p><a href="https://discord.gg/3hQdDdgSAY">discord</a></p>
