--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   <ul>
   <li><a class="icon" href="index.html"><img id="icon" src="img/transnoglo.png"></a></li>
   <li><a class="twitch" href="https://twitch.tv/ancientcafe">twitch</a></li>
-  <li><a class="music" href="music.html">music</a></li>
-  <li><a class="connect" href="connect.html">connect</a></li>
+  <li><a class="youtube" href="https://www.youtube.com/channel/UCf9rjEMLaOC4eAK-gTxQWyw">youtube</a></li>
+  <li><a class="twitter" href="https://twitter.com/ancientcafe">twitter</a></li>
+  <li><a class="tiktok" href="https://tiktok.com/@ancientcafetv">tiktok</a></li>
+  <li><a class="discord" href="https://discord.gg/3hQdDdgSAY">discord</a></li>
   </ul>
   </div>
 
